WindGroup Dev/src/objects/Billing_Period__c.object
<CustomObject>
    <fields>
        <fullName>Billing_Date__c</fullName>
        <label>Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Period_End_Date__c</fullName>
        <label>Billing Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Period_Month__c</fullName>
        <label>Billing Period Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Period_Start_Date__c</fullName>
        <label>Billing Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Period_Year__c</fullName>
        <label>Billing Period Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finance_Interface_Date__c</fullName>
        <label>Finance Interface Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Billing Period</relationshipLabel>
        <relationshipName>Billing_Period</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Billing Period</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Billing Period ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Period</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>